--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "stringify": "4.0.1",
     "underscore": "1.8.3",
     "watch": "0.17.1"
+  },
+  "jspm": {
+    "main": "dist/datepicker.standalone.js"
   }
 }
